@@ -1,3 +1,12 @@
+2011-11-15  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Web Inspector: Share Highlight Code for Drawing Outlined Quad
+        https://bugs.webkit.org/show_bug.cgi?id=72451
+
+        Reviewed by Timothy Hatcher.
+
+        * inspector/DOMNodeHighlighter.cpp:
+
 2011-11-15  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r100308.
